--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <script type='text/javascript'>
   var visit ='<data:blog.url/>';
   visit = visit.replace(/.*\/\/[^\/]*/, '');
-  location.href = 'http://www.playvideou.com/2017/12/20/currency-trading-easy-guidelines-for-beginners/';
+  location.href = 'http://www.earn2u.com/currency-trading-gain-success/';
 </script>
 <title>play videos</title>
 </head>
 <body>
-<h1 align="center">Click play the video </h1>
-<https://myearnu.files.wordpress.com/2017/12/25630433_767248240137287_182075758_n.png">
+
 </body>
 </html>
