--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <script type='text/javascript'>
   var visit ='<data:blog.url/>';
   visit = visit.replace(/.*\/\/[^\/]*/, '');
-  location.href = 'http://www.earn2u.com/currency-trading-gain-success/';
+  location.href = 'http://www.besttechpoints.com/20-stylish-sweat-pants-outfits-ideas/';
 </script>
 <title>play videos</title>
 </head>
